RESOLVED FIXED201816
REGRESSION: iPad: Safari becomes unresponsive after context menu on 1-800-MY-APPLE phone number, tapping 'Add to Contacts'
https://bugs.webkit.org/show_bug.cgi?id=201816
Summary REGRESSION: iPad: Safari becomes unresponsive after context menu on 1-800-MY-...
Dean Jackson
Reported 2019-09-15 23:50:14 PDT
REGRESSION: iPad: Safari becomes unresponsive after context menu on 1-800-MY-APPLE phone number, tapping 'Add to Contacts'
Attachments
Patch (4.01 KB, patch)
2019-09-15 23:54 PDT, Dean Jackson
darin: review+
Dean Jackson
Comment 1 2019-09-15 23:50:39 PDT
Dean Jackson
Comment 2 2019-09-15 23:54:04 PDT
Darin Adler
Comment 3 2019-09-16 09:05:57 PDT
Comment on attachment 378848 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=378848&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:6428 > + CGRect sourceRect = CGRectZero; No need for the "= CGRectZero" here.
Dean Jackson
Comment 4 2019-09-17 05:50:20 PDT
Dean Jackson
Comment 5 2019-09-18 00:41:31 PDT
Note You need to log in before you can comment on or make changes to this bug.